--- a/9-IntroToMatplotlib.ipynb
+++ b/9-IntroToMatplotlib.ipynb
@@ -379,7 +379,9 @@
    "id": "bf823f9e-b511-4ad8-b16d-48972bd6b91b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#new_fig.savefig(\"new_fig.png\", dpi=200)"
+   ]
   }
  ],
  "metadata": {
